--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
 
       <div id="preset-box">
         <ul>
-          <li class="preset-btn" id="personal-top">Personal Top</li>
+          <li class="preset-btn" id="personal-top">Your Top</li>
           <li class="preset-btn" id="global-top">Global Top</li>
 
-          <li class="preset-btn" id="recommended">Recommended</li>
-          <li class="preset-btn" id="new-tracks">New Tracks</li>
+          <li class="preset-btn" id="recommended">Try This</li>
+          <li class="preset-btn" id="new-tracks">New Music</li>
         </ul>
       </div>
 
@@ -337,164 +337,7 @@
             <th colspan="2">Spotinfinity Pearls</th>
           </tr>
           <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
-          </tr>
-          <tr>
-            <td>Song Name</td>
-            <td>Artist</td>
+            <td colspan="2">Saved songs will appear here!</td>
           </tr>
         </table>
       </div>
